# Compickle-

./: LICENSE  README.md  __init__.py  compickle.c  compickle.py  pyproject.toml  setup.py
.github/workflows/: build.yml
